# bashdb

./: .readthedocs.yaml  ChangeLog  README.md  acinclude.m4  bashdb-main.inc.in  bashdb.in  configure.ac
.circleci/: config.yml
.github/workflows/: CI.yml
command/: break.sh  commands.sh  condition.sh  debug.sh  delete.sh  handle.sh  help.sh  history.sh  info.sh  load.sh  next.sh  search.sh  shell.sh  signal.sh  skip.sh  step.sh
command/info_sub/: args.sh  args_bsp.sh  variables.sh
command/set_sub/: annotate.sh  history.sh  linetrace.sh  listsize.sh  width.sh
command/show_sub/: commands.sh
doc/: bashdb.texi
docs/: Makefile  conf.py  entry-exit.rst  features.rst  index.rst  install.rst  make.bat  manpage.rst
docs/commands/breakpoints/: condition.rst  tbreak.rst
docs/commands/data/: display.rst  eval.rst  examine.rst  load.rst
docs/commands/info/: breakpoints.rst  line.rst  program.rst  source.rst  variables.rst
docs/commands/running/: continue.rst  debug.rst  (+3 more)
docs/syntax/: command.rst
init/: opts.sh  term-background.sh  vars.sh
lib/: alias.sh  break.sh  display.sh  filecache.sh  fns.sh  frame.sh  help.sh  hist.sh  hook.sh  info.sh  msg.sh  processor.sh  sort.sh  validate.sh
test/data/: bash-rematch.cmd  bash-rematch.right  bug-loc.right  info-args.cmd  info-args.right  misc-output-50.right  settrace.right
test/example/: Makefile.am  bug-loc.sh  stepping.sh
test/integration/: test-bug-loc  test-interrupt  test-settrace.in
test/unit/: .gitignore  Makefile.am  test-alias.sh.in  test-cmd-info-variables.sh.in  test-fns.sh.in  test-sort.sh.in
(+20 files in other folders)
